@@ -1096,6 +1096,39 @@ WIDGET_DEFAULT = {
         "column_index_battery_charge": 1,
         "column_index_activation_timer": 2,
     },
+    "pace_notes": {
+        "enable": True,
+        "update_interval": 20,
+        "position_x": 739,
+        "position_y": 251,
+        "opacity": 0.9,
+        "layout": 0,
+        "font_name": "Consolas",
+        "font_size": 15,
+        "font_weight": "bold",
+        "bar_padding": 0.2,
+        "bar_gap": 2,
+        "show_background": True,
+        "show_pace_notes": True,
+        "pace_notes_width": 30,
+        "pace_notes_text_alignment": "Center",
+        "font_color_pace_notes": "#FFFFFF",
+        "bkg_color_pace_notes": "#66111111",
+        "show_comments": False,
+        "comments_width": 30,
+        "comments_text_alignment": "Center",
+        "font_color_comments": "#FFFFFF",
+        "bkg_color_comments": "#66111111",
+        "show_debugging": False,
+        "debugging_width": 30,
+        "debugging_text_alignment": "Center",
+        "font_color_debugging": "#FFFFFF",
+        "bkg_color_debugging": "#66111111",
+        "auto_hide_if_not_available": True,
+        "column_index_pace_notes": 1,
+        "column_index_comments": 2,
+        "column_index_debugging": 3,
+    },
     "pedal": {
         "enable": True,
         "update_interval": 20,
@@ -1907,6 +1940,40 @@ WIDGET_DEFAULT = {
         "vehicle_color_yellow": "#FFFF00",
         "vehicle_outline_color": "#88000000",
         "vehicle_outline_width": 1,
+    },
+    "track_notes": {
+        "enable": True,
+        "update_interval": 20,
+        "position_x": 739,
+        "position_y": 182,
+        "opacity": 0.9,
+        "layout": 0,
+        "font_name": "Consolas",
+        "font_size": 15,
+        "font_weight": "bold",
+        "bar_padding": 0.2,
+        "bar_gap": 2,
+        "show_background": True,
+        "show_track_notes": True,
+        "track_notes_uppercase": False,
+        "track_notes_width": 30,
+        "track_notes_text_alignment": "Center",
+        "font_color_track_notes": "#FFFFFF",
+        "bkg_color_track_notes": "#66111111",
+        "show_comments": False,
+        "comments_width": 30,
+        "comments_text_alignment": "Center",
+        "font_color_comments": "#FFFFFF",
+        "bkg_color_comments": "#66111111",
+        "show_debugging": False,
+        "debugging_width": 30,
+        "debugging_text_alignment": "Center",
+        "font_color_debugging": "#FFFFFF",
+        "bkg_color_debugging": "#66111111",
+        "auto_hide_if_not_available": True,
+        "column_index_track_notes": 1,
+        "column_index_comments": 2,
+        "column_index_debugging": 3,
     },
     "trailing": {
         "enable": True,
