@@ -52,6 +52,7 @@ from . import (
     laps_and_position,
     navigation,
     p2p,
+    pace_notes,
     pedal,
     radar,
     rake_angle,
@@ -69,6 +70,7 @@ from . import (
     system_performance,
     timing,
     track_map,
+    track_notes,
     trailing,
     tyre_carcass,
     tyre_load,
